// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`p component 1`] = `
<p
  onClick={[Function]}
  setCapAt={[Function]}
>
  Some content...
</p>
`;

exports[`p component 2`] = `
<p
  className="Capped"
  onClick={[Function]}
  setCapAt={[Function]}
>
  Some conte
</p>
`;
